hydroflow/tests/snapshots/surface_context__context_current_tick_start@graphvis_dot.snap
---
source: hydroflow/tests/surface_context.rs
expression: "df.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([()])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(|_| context.current_tick_start())", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) defer_tick()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) assert(|t: &hydroflow::web_time::SystemTime| t.elapsed().unwrap().as_nanos() > 0)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) for_each(|t: hydroflow::web_time::SystemTime| {\l    println!(\"Time between ticks: {:?}\", t.elapsed())\l})\l", shape=house, fillcolor="#ffff88"]
    n6v1 [label="(n6v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n7v1 [label="(n7v1) identity()", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n4v1 -> n5v1
    n3v1 -> n4v1
    n2v1 -> n6v1
    n1v1 -> n2v1
    n6v1 -> n7v1
    n7v1 -> n8v1
    n8v1 -> n3v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n3v1
        n4v1
        n5v1
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 1"
        n7v1
    }
}

